fix wrong css cell-spacing

--- a/autotimer/src/web-data/style.css
+++ b/autotimer/src/web-data/style.css
@@ -654,7 +654,8 @@
 	}
 
 	#timerEditForm table {
-		cell-spacing: 1px
+		border-spacing: 1px;
+		border-collapse: separate;
 	}
 
 
